--- a/mariadb-ha-with-galera/stack.yaml
+++ b/mariadb-ha-with-galera/stack.yaml
@@ -12,9 +12,9 @@ stack:
     publisher: "monk.io"
     icon:   
   runnable-list:
-    # - mariadb-ha/mariadb-bootstrap
+    - mariadb-ha/mariadb-bootstrap
     - mariadb-ha/monk-slave-1
-    # - mariadb-ha/monk-slave-2
+    - mariadb-ha/monk-slave-2
   variables:
     mariadb-image-tag: latest
     mariadb-root-user: root
