--- a/mariadb/stack.yaml
+++ b/mariadb/stack.yaml
@@ -2,6 +2,15 @@ namespace: mariadb
 
 stack:
   defines: process-group
+  metadata:
+    defines: metadata
+    name: mariadb
+    description: MariaDB Galera is a multi-primary database cluster solution for synchronous replication and high availability.
+    tags: self hosted, database
+    website: https://mariadb.org/
+    source: https://github.com/MariaDB/
+    publisher: "monk.io"
+    icon: https://raw.githubuser  
   runnable-list:
     - mariadb/mariadb
   variables:
