--- a/mariadb/stack.yaml
+++ b/mariadb/stack.yaml
@@ -1,21 +1,21 @@
+---
 namespace: mariadb
 
 stack:
   defines: process-group
   metadata:
-    defines: metadata
     name: mariadb
     description: MariaDB Galera is a multi-primary database cluster solution for synchronous replication and high availability.
     tags: self hosted, database
     website: https://mariadb.org/
     source: https://github.com/MariaDB/
-    publisher: "monk.io"
-    icon: https://raw.githubuser  
+    publisher: monk.io
+    icon: https://raw.githubuser
   runnable-list:
     - mariadb/mariadb
   variables:
-    mariadb-image-tag: "latest"
-    mariadb-root-password: "4wfoA7auxY"
-    mariadb-database-name: "mariadb"
-    mariadb-user-name: "mariadbuser"
-    mariadb-user-password: "Cz9mGzmRtW"
+    mariadb-image-tag: latest
+    mariadb-root-password: 4wfoA7auxY
+    mariadb-database-name: mariadb
+    mariadb-user-name: mariadbuser
+    mariadb-user-password: Cz9mGzmRtW
